@@ -27,7 +27,6 @@ Dist::Zilla::Plugin::License = 0
 Dist::Zilla::Plugin::Readme = 0
 Dist::Zilla::Plugin::Manifest = 0
 Dist::Zilla::Plugin::Test::Compile = 2.023
-Dist::Zilla::Plugin::Test::CheckDeps = 0.008
 Dist::Zilla::Plugin::Test::NoTabs = 0
 Dist::Zilla::Plugin::EOLTests = 0
 Dist::Zilla::Plugin::MetaTests = 0
