@@ -89,7 +89,6 @@ sub configure
         [ 'Git::GatherDir'      => { exclude_filename => 'LICENSE' } ],
         qw(MetaYAML MetaJSON License Readme Manifest),
         [ 'Test::Compile'       => { ':version' => '2.023', fail_on_warning => 'author', bail_out_on_fail => 1, script_finder => [qw(:ExecFiles @Author::ETHER/Examples)] } ],
-        [ 'Test::CheckDeps'     => { fatal => 0, level => 'suggests' } ],
         [ 'Test::NoTabs'        => { script_finder => [qw(:ExecFiles @Author::ETHER/Examples)] } ],
         'EOLTests',
         'MetaTests',
@@ -247,10 +246,6 @@ following F<dist.ini> (following the preamble):
     bail_out_on_fail = 1
     script_finder = :ExecFiles
     script_finder = Examples
-
-    [Test::CheckDeps]
-    fatal = 0
-    level = suggests
 
     [Test::NoTabs]
     script_finder = :ExecFiles
